# napalm-core

./: .gitignore  README.md  pyproject.toml
napalm_core/: napalm.py
napalm_core/detectors/: chainlink_price_feed.py  loop_array_dos.py
napalm_core/detectors/environment/: block_timestamp.yml  block_timestamp_swap.yaml
napalm_core/detectors/token_interface/: erc20_approve_call.py  erc721_stuck_mint.py  erc721_stuck_transfer_from.py  unsafe_erc20.yaml
napalm_core/detectors/unchecked_return_value/: create2_unchecked_return.py  erc20_unchecked_approve.py  unrequired_equation.py
napalm_core/detectors/util/: post_dominators.py  taint.py  unused_return_values.py
napalm_core/indicators/: blocknumber.yaml  privilege.yml  push0_solidity_version.py  solmate.yaml  unchecked.yml
napalm_core/optimisations/: simple-gas-optimisations.yml
